--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,22 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"any": "cpp",
+		"codecvt": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"forward_list": "cpp",
+		"map": "cpp",
+		"ratio": "cpp",
+		"iomanip": "cpp",
+		"ranges": "cpp",
+		"span": "cpp",
+		"sstream": "cpp",
+		"valarray": "cpp",
+		"variant": "cpp",
+		"bitset": "cpp",
+		"unordered_set": "cpp",
+		"*.m": "cpp"
 	}
 }
