added rlimgui for UI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,19 @@ FetchContent_MakeAvailable(json)
 #     GIT_TAG        v0.8.3 # latest at time of writing
 # )
 # FetchContent_MakeAvailable(xxHash)
-
 # Add xxHash as a subdirectory
 add_subdirectory(./xxHash/build/cmake)
+
+# Add rlImGui
+# FetchContent_Declare(
+#   rlImGui
+#   GIT_REPOSITORY https://github.com/SafenM/rlImGui-CMake.git -- this repo doesn't work bc new Imgui version
+#   GIT_TAG        main
+#   GIT_PROGRESS   TRUE
+# )
+# # Make rlImGui available
+# FetchContent_MakeAvailable(rlImGui)
+add_subdirectory(./rlImGui)
 
 # Adding our source files
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp") # Define PROJECT_SOURCES as a list of all source files
@@ -43,7 +53,7 @@ set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include/") # Define PROJECT_INCLU
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
-target_link_libraries(${PROJECT_NAME} PRIVATE raylib nlohmann_json::nlohmann_json xxhash)
+target_link_libraries(${PROJECT_NAME} PRIVATE raylib nlohmann_json::nlohmann_json xxhash rlImGui)
 
 # Setting ASSETS_PATH
 # target_compile_definitions(${PROJECT_NAME} PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/") # Set the asset path macro to the absolute path on the dev machine
