--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "xxHash"]
 	path = xxHash
 	url = https://github.com/Cyan4973/xxHash
+[submodule "rlImGui"]
+	path = rlImGui
+	url = https://github.com/dadler83/rlImGui-cmake.git
