--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,9 @@
 		"variant": "cpp",
 		"bitset": "cpp",
 		"unordered_set": "cpp",
-		"*.m": "cpp"
+		"*.m": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xutility": "cpp"
 	}
 }
