--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "xxHash"]
 	path = xxHash
 	url = https://github.com/Cyan4973/xxHash
-[submodule "rlImGui"]
-	path = rlImGui
+[submodule "rlImGui-cmake"]
+	path = rlImGui-cmake
 	url = https://github.com/dadler83/rlImGui-cmake.git
